syntax = "proto2";

package chimp.protobuf;

// UIID = String | Int | * | XY | UIID onChild Idx     Idx = Int | *     XY = (Int,Int)    Orientation = XY | Left | Right | UP | Down | *
// AppEvent = Click(UIID) | LongClick(UIID) | Pinch(XY,XY,XY,XY) | Swipe(UIID,Orientation) | Type(UUID,String) | Sleep(Int) | Skip

message UIID {
  enum UIIDType {
     R_ID      = 1;
     NAME_ID   = 2;
     WILD_CARD = 3;
     XY_ID = 4;
     ONCHILD_ID = 5;
     CONJUNCT_ID = 6;
     TOP_ID = 7;
  }
  required UIIDType idType = 1;
  optional int32 rid = 2;
  optional string nameid = 3;
  optional XYCoordin xyid = 4;
  optional UIID parentId = 5;
  optional ChildIdx childIdx = 6;
  optional string display = 7;
  optional UIID uiid1 = 8;
  optional UIID uiid2 = 9;
}

message ChildIdx {
    enum IdxType {
        INT = 1;
        WILD_CARD = 2;
    }
    required IdxType idxType = 1;
    optional int32 int = 2;
}

message XYCoordin {
   required int32 x = 1;
   required int32 y = 2;
}

message Orientation {
   enum OrientType {
      XY_TYPE = 1;
      LEFT  = 2;
      RIGHT = 3;
      UP    = 4;
      DOWN  = 5;
      WILD_CARD = 6;
   }
   required OrientType orientType = 1;
   optional XYCoordin xy = 2;
}

message AppEvent {
  enum AppEventType {
    CLICK  = 1;
    LONGCLICK = 2;
    PINCH = 3;
    SWIPE = 4;
    TYPE  = 5;
    SLEEP = 6;
    SKIP  = 7;
  }
  required AppEventType eventType = 1;
  optional Click click = 2;
  optional LongClick longclick = 3;
  optional Pinch pinch = 4;
  optional Swipe swipe = 5;
  optional Type type = 6;
  optional Sleep sleep = 7;
}

message Click {
  required UIID uiid = 1;
}

message LongClick {
  required UIID uiid = 1;
}

message Pinch {
  required XYCoordin start1 = 1;
  required XYCoordin start2 = 2;
  required XYCoordin end1 = 3;
  required XYCoordin end2 = 4;
}

message Swipe {
  required UIID uiid = 1;
  required Orientation pos = 2;
}

message Type {
   required UIID uiid = 1;
   required string input = 2;
}

message Sleep {
  required int32 time = 1;
}



